--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
+body {
+    background-image: url(images/gravel.webp);
+}
+
+p {
+    font-size: 28;
+    font-style: italic;
+
+}
+
 #title {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 50px;
 }
 
 #section {
@@ -20,7 +31,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    font-size: 30px;
+    font-size: 35px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
  input {
@@ -28,3 +39,4 @@
     padding: 10px;
     border: solid gray 8px;
  }
+
